both forms are there formX and form

--- a/expat/src/styles/App.css
+++ b/expat/src/styles/App.css
@@ -20,8 +20,8 @@
   color: slategrey;
   border: solid .25rem slategray;
   margin-top: 15rem;
-  width: 50rem;
-  margin-left: 15rem;
+  width: 30rem;
+  margin-left: 25%;
 }
 
 .App-link {
