--- a/expat/src/styles/App.css
+++ b/expat/src/styles/App.css
@@ -2,8 +2,6 @@
   text-align: center;
 }
 
-
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -18,7 +16,7 @@
   justify-content: left;
   font-size: calc(10px + 2vmin);
   color: slategrey;
-  border: solid .25rem slategray;
+  border: solid 0.25rem slategray;
   margin-top: 15rem;
   width: 30rem;
   margin-left: 25%;
@@ -28,9 +26,125 @@
   color: #61dafb;
 }
 
-.centerForm{
+.centerForm {
   display: flex;
   text-align: center;
 }
 
+-------------- .App {
+  text-align: center;
+}
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  margin: 1rem 0rem 1rem 3rem;
+  font-size: 3rem;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 1);
+}
+
+.adventure {
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 10rem;
+}
+
+.start {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 1);
+  background-color: rgba(232, 232, 232, 1);
+  padding: 0.5rem 1rem;
+  border-radius: 0.8rem;
+  margin-left: 2.5rem;
+  font-size: 1rem;
+}
+
+.start:hover {
+  box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0, 0, 0, 0.5);
+}
+
+.input {
+  font-size: 1rem;
+  padding-left: 0.8rem;
+  margin-left: 2rem;
+  border-radius: 5%;
+}
+
+.nav-links {
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 3rem;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 1);
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  color: rgb(63, 154, 182);
+  text-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 1);
+}
+
+.dash {
+  display: flex;
+  margin-top: 1rem;
+}
+
+.animals-list {
+  margin-left: 3rem;
+  margin-right: 3rem;
+  background-color: rgba(179, 90, 90);
+  box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0, 0, 0, 0.5);
+  width: 16rem;
+  border-radius: 0.8rem;
+}
+
+ul {
+  padding-inline-start: 0px;
+}
+
+.organized {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-animals {
+  list-style-type: none;
+  padding: 0.8rem 0rem 0.8rem 0.8rem;
+  font-size: 1.2rem;
+  width: 100%;
+  display: flex;
+  align-items: start;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 1rem;
+  width: 100%;
+  justify-content: end;
+}
+
+.card {
+  background-color: rgb(179, 90, 90);
+  box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0, 0, 0, 0.5);
+  width: 10rem;
+  height: 14rem;
+  margin: 5rem;
+  border-radius: 0.8rem;
+}
+
+img {
+  width: 12rem;
+  height: 16rem;
+  margin: 1rem;
+  border-radius: 0.8rem;
+}
