--- a/expat/src/styles/App.css
+++ b/expat/src/styles/App.css
@@ -22,12 +22,14 @@
   margin-top: 15rem;
   width: 30rem;
   margin-left: 25%;
+  /* background-image: url('../components/images/max3.png'); */
+  border-radius: 2rem;
 }
 
 .header{
   display: flex;
   text-align: center;
-  background-image: url('/images/max3.png');
+ 
   background-color: #6BCAE2;
   height: 5rem;
   
@@ -47,7 +49,10 @@ nav{
 }
 
 .logo{
-  height: 5rem;
+  height: 6rem;
+  border-radius: 5rem;
+  margin-top: .5rem;
+  border: solid .25rem #6BCBE2;
 }
 .nav-link{
   display: flex;
@@ -66,6 +71,10 @@ box-shadow: .5rem;
 color: brown
 
 
+}
+
+footer{
+  background-color: #6BCBE2;
 }
 
 
