--- a/expat/src/styles/App.css
+++ b/expat/src/styles/App.css
@@ -29,10 +29,13 @@
 .header{
   display: flex;
   text-align: center;
- 
+  flex-direction: row;
   background-color: #6BCAE2;
   height: 5rem;
   
+}
+.content {
+  min-height: calc(100vh - 70px);
 }
 
 /* .headTitle{
@@ -46,6 +49,8 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: #6BCBE2;
+  
 }
 
 .logo{
@@ -54,10 +59,23 @@ nav{
   margin-top: .5rem;
   border: solid .25rem #6BCBE2;
 }
+
+.logo2{
+  height: 6rem;
+  border-radius: 5rem;
+  margin-bottom: .5rem;
+  border: solid .25rem #6BCBE2;
+}
 .nav-link{
   display: flex;
   align-content: center;
+  color: saddlebrown;
+  
+
+  
 }
+
+
 
 .button{
 background-color: antiquewhite;
@@ -73,9 +91,7 @@ color: brown
 
 }
 
-footer{
-  background-color: #6BCBE2;
-}
+
 
 
 /* .App-link {
@@ -239,4 +255,12 @@ img {
   padding: 0 10px 10px 0;
 }
 
+.footer{
+  
+  background-color: #6BCBE2;
+    height: 7rem;
+    position: relative;
+  right: 0;bottom:0;left:0;
+    width: 100%;
+}
 
