removed text decoration

--- a/expat/src/styles/index.css
+++ b/expat/src/styles/index.css
@@ -41,17 +41,24 @@ body{
     width: 100%;
   }
 
+  a{
+    text-decoration: none;
+  }
+
   .nav-link:hover{
-    color: #50c44a;
+    color: #3ADE32;
+    text-decoration: none;
     
     }
-   /* .nav-link:visited{
-    color: #ef7f34;
-  }  */
+   /* .nav-link:visited{ 
+    color: #3ADE32;
+    text-decoration: none;
+  }  
 
-  /* .nav-link:active{
+  .nav-link:active{
    color: #139df9;
-  } */
+   text-decoration: none;
+  }  */
   
   input[type=text] {
     border-radius: .33rem;
@@ -65,6 +72,11 @@ body{
   }
   input[type=email] {
     border-radius: .33rem;
+    border: solid .10rem grey;
+    padding: .25rem;
+  }
+  textarea[type=description] {
+    border-radius: .50rem;
     border: solid .10rem grey;
     padding: .25rem;
   }
