--- a/expat/src/styles/App.css
+++ b/expat/src/styles/App.css
@@ -19,7 +19,7 @@
   height: 8rem;
   /* background-image: linear-gradient(to bottom, #6BCAE2, #e3f7fc); */
   background-color: #6BCAE2;
-  opacity: 80%;
+  opacity: .8;
 
   width: 100%;
   padding-left: 20px;
@@ -123,7 +123,7 @@
   width: 500px;
   margin: 20px;
   background-color: white;
-  opacity: 90%;
+  opacity: .9;
 }
 
 .cardContainer img {
@@ -175,7 +175,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  opacity: 90%;
+  opacity: .9;
 }
 
 
